# Data_Seance

./: .gitignore  TODO.md  pyproject.toml  timeline.md
assets/guidelines/: guidelines_short.txt  system_prompt_ethics_compliance_report.text
core/: config.py  model.py
core/notebooks/: ICE_plot_tool.ipynb  code_gen_runner_agent.ipynb  explainability_demo.ipynb  image_query_openrouter.ipynb  notebook_maker.ipynb
core/scripts/: DataLoader.py
data/: boston_housing_dataset.pkl  ethics_compliance.txt
