[project]
name = "data-seance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "shap>=0.48.0",
    "dotenv>=0.9.9",
    "langchain-openai>=1.0.1",
    "openai>=2.6.0",
    "nbformat>=5.10.4",
    "nbclient>=0.10.2",
    "langgraph>=1.0.3",
    "langchain-experimental>=0.4.0",
    "langchain>=1.0.8",
]
